--- a/style.css
+++ b/style.css
@@ -349,6 +349,10 @@ body {
 	width: 50%;
 }
 
+.w-40 {
+	width: 40%;
+}
+
 .w-30 {
 	width: 30%;
 }
@@ -759,14 +763,14 @@ h1 {
 
 .name {
 	color: #683C10;
-	font-weight: 600;
+	font-weight: 500;
 	margin: 0;
 	white-space: nowrap;
 }
 
 .name-wrap {
 	color: #683C10;
-	font-weight: 600;
+	font-weight: 500;
 	margin: 0;
 }
 
