darker plus sign

--- a/style.css
+++ b/style.css
@@ -1354,7 +1354,7 @@ ul.bullet {
 }
 
 .collapse-button .fa {
-	color: #d1d1d1;
+	color: #797979;
 	transition: .3s transform ease-in-out;
 	font-size: 1.2rem;
 }
